# mintymacks

./: Cargo.toml  LICENSE  README.md  TODO.md  callgrind.out.28067  eco.pgn  flake.nix  rustfmt.toml
src/: arrays.rs  game.rs  lib.rs  main.rs  openings.rs  profile.rs  utils.rs  zobrist.rs
src/arrays/: mod.rs
src/bitboard/: mod.rs  slides.rs  tests.rs
src/bitboards/: board.rs  mod.rs  slides.rs  tests.rs
src/bits/: attackers.rs  attacks.rs  board.rs  fills.rs  jumps.rs  mod.rs  movecount.rs  movegen.rs  moving.rs  opdif.rs  rays.rs  slides.rs  tests.rs  threats.rs  victory.rs  vision.rs
src/board/: castling.rs  mod.rs  moves.rs  square.rs  tests.rs
src/byteboard/: mod.rs
src/engine/: mod.rs  ucio.rs
src/eval/: mod.rs
src/fuzzing/: enumerate.rs  mod.rs  stockfish-perft.sh  test.rs
src/game/: mod.rs
src/model/: castling.rs  metadata.rs  mod.rs  moves.rs  square.rs  tests.rs
src/notation/: algebraic.rs  fen.rs  longalg.rs  mod.rs  pgn.rs  squares.rs  tests.rs
src/notation/uci/: engine.rs  gui.rs  mod.rs  test.rs
src/uci/: fen.rs  longalg.rs  mod.rs  perft.rs  pseudomove.rs  squares.rs  tests.rs
src/zobrist/: mod.rs  table.rs  tests.rs
