[package]
name = "mintymacks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
rand = "0.9.2"
regex = "1.11.3"

tokio = { version = "1.47.0", features = ["full", "io-util"] }
tokio-util = { version = "0.7.16" }
serde = { version = "1.0.228", features = ["derive"] }
trie-rs = "0.4.2"
clap = { version = "4.5.48", features = [ "derive" ] }
toml = "0.9.7"
indexmap = { version = "2.11.4", features = [ "serde" ] }
lazy_static = "1.5.0"
include-flate = "0.3.1"