[package]
name = "mintymacks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
rand = "0.9.2"
regex = "1.11.3"

tokio = { version = "1.47.0", features = ["full", "io-util"] }
tokio-util = { version = "0.7.16" }
serde = { version = "1.0.228", features = ["derive"] }
trie-rs = "0.4.2"
toml = "0.9.7"
indexmap = { version = "2.11.4", features = [ "serde" ] }
include-flate = "0.3.1"
strum = { version = "0.27.2", features = [ "derive" ] }
chrono = "0.4.42"
rootcause = "0.4.2"

[build]
rustflags = ["-C", "target-cpu=native"]